
For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed `copy from` to be able to copy data into a partitioned table with a 
   generated column as both the primary key and the partitioned column.

 - NullPointerException thrown when selecting ``routing_hash_function``
   or ``version`` columns from sys.shards for blob tables.

 - Fixed error thrown when applying filtering, ordering or limit on
   joins with more than 2 tables.

 - Fixed issue which lead to an object's column policy being changed to
   the default DYNAMIC when adding a nested object column using the
   `alter table` statement.

 - Fixed an issue with `regexp_replace`: In some cases it used the third
   argument as flags parameter instead of the fourth argument.

 - Improved error message when trying to update an element of an array.

 - Fixed a regression that lead to `ArrayIndexOutOfBoundsException` if a JOIN
   query was made with a WHERE clause on partitioned columns.

 - Fixed a NullPointerException which could occur if an attempt was made to use
   `match` on two different relations within an explicit join condition.
   This now raises a proper error stating that it's not supported.

 - Wrong results were returned from queries with more than one level
   of nested subselects.

 - ``ORDER BY`` on joins caused incorrect order of values when having multiple
   non-distinct values on the left part of the join. Now ``ORDER BY`` is
   correctly applied.

 - Fix: Usage of ``DISTINCT`` in a query with a ``GROUP BY`` was producing
   wrong results and  was changed to throw UnsupportedOperationException.
   e.g.: ``SELECT DISTINCT col1 from t1 GROUP BY col2, col1``
