@@ -84,6 +84,28 @@ public abstract class AddFunction extends ArithmeticFunction implements Operator
         }
     }
 
+    private static class FloatAddFunction extends AddFunction {
+
+        FloatAddFunction(FunctionInfo info) {
+            super(info);
+        }
+
+        @Override
+        public Number evaluate(Input[] args) {
+            assert args.length == 2 : "number of args must be 2";
+            Object arg0Value = args[0].value();
+            Object arg1Value = args[1].value();
+
+            if (arg0Value == null) {
+                return null;
+            }
+            if (arg1Value == null) {
+                return null;
+            }
+            return ((Number) arg0Value).floatValue() + ((Number) arg1Value).floatValue();
+        }
+    }
+
     private static class LongAddFunction extends AddFunction {
 
         LongAddFunction(FunctionInfo info) {
@@ -111,7 +133,10 @@ public abstract class AddFunction extends ArithmeticFunction implements Operator
         @Override
         public FunctionImplementation getForTypes(List<DataType> dataTypes) throws IllegalArgumentException {
             if (containsTypesWithDecimal(dataTypes)) {
-                return new DoubleAddFunction(genDoubleInfo(NAME, dataTypes, FunctionInfo.DETERMINISTIC_AND_COMPARISON_REPLACEMENT));
+                if (containsDouble(dataTypes)) {
+                    return new DoubleAddFunction(genDoubleInfo(NAME, dataTypes, FunctionInfo.DETERMINISTIC_AND_COMPARISON_REPLACEMENT));
+                }
+                return new FloatAddFunction(genFloatInfo(NAME, dataTypes, FunctionInfo.DETERMINISTIC_AND_COMPARISON_REPLACEMENT));
             }
             return new LongAddFunction(genLongInfo(NAME, dataTypes, FunctionInfo.DETERMINISTIC_AND_COMPARISON_REPLACEMENT));
         }
