@@ -70,6 +70,28 @@ public abstract class DivideFunction extends ArithmeticFunction implements Opera
         }
     }
 
+    private static class FloatDivideFunction extends SubtractFunction {
+
+        FloatDivideFunction(FunctionInfo info) {
+            super(info);
+        }
+
+        @Override
+        public Number evaluate(Input[] args) {
+            assert args.length == 2 : "number of args must be 2";
+            Object arg0Value = args[0].value();
+            Object arg1Value = args[1].value();
+
+            if (arg0Value == null) {
+                return null;
+            }
+            if (arg1Value == null) {
+                return null;
+            }
+            return ((Number) arg0Value).floatValue() / ((Number) arg1Value).floatValue();
+        }
+    }
+
     private static class LongDivideFunction extends DivideFunction {
 
         LongDivideFunction(FunctionInfo info) {
@@ -98,7 +120,10 @@ public abstract class DivideFunction extends ArithmeticFunction implements Opera
         @Override
         public FunctionImplementation getForTypes(List<DataType> dataTypes) throws IllegalArgumentException {
             if (containsTypesWithDecimal(dataTypes)) {
-                return new DoubleDivideFunction(genDoubleInfo(NAME, dataTypes));
+                if (containsDouble(dataTypes)) {
+                    return new DoubleDivideFunction(genDoubleInfo(NAME, dataTypes));
+                }
+                return new FloatDivideFunction(genFloatInfo(NAME, dataTypes));
             }
             return new LongDivideFunction(genLongInfo(NAME, dataTypes));
         }
