@@ -62,6 +62,28 @@ public abstract class SubtractFunction extends ArithmeticFunction {
         }
     }
 
+    private static class FloatSubtractFunction extends SubtractFunction {
+
+        FloatSubtractFunction(FunctionInfo info) {
+            super(info);
+        }
+
+        @Override
+        public Number evaluate(Input[] args) {
+            assert args.length == 2 : "number of args must be 2";
+            Object arg0Value = args[0].value();
+            Object arg1Value = args[1].value();
+
+            if (arg0Value == null) {
+                return null;
+            }
+            if (arg1Value == null) {
+                return null;
+            }
+            return ((Number) arg0Value).floatValue() - ((Number) arg1Value).floatValue();
+        }
+    }
+
     private static class LongSubtractFunction extends SubtractFunction {
 
         LongSubtractFunction(FunctionInfo info) {
@@ -89,7 +111,10 @@ public abstract class SubtractFunction extends ArithmeticFunction {
         @Override
         public FunctionImplementation getForTypes(List<DataType> dataTypes) throws IllegalArgumentException {
             if (containsTypesWithDecimal(dataTypes)) {
-                return new DoubleSubtractFunction(genDoubleInfo(NAME, dataTypes));
+                if (containsDouble(dataTypes)) {
+                    return new DoubleSubtractFunction(genDoubleInfo(NAME, dataTypes));
+                }
+                return new FloatSubtractFunction(genFloatInfo(NAME, dataTypes));
             }
             return new LongSubtractFunction(genLongInfo(NAME, dataTypes));
         }
